update logo -front

--- a/cli/src/index.html
+++ b/cli/src/index.html
@@ -1,16 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Cli</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- Ace Editor CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ace.js" integrity="sha512-x5mU0t9vawsI0b5z2Ue2bsa9dZf3Zx3lF0aYB2JY1t2tF9m1aX0oT1D3fJt7o1+3n4c6C4b5EqbE7+XgGzjQrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ext-language_tools.min.js" integrity="sha512-h5+0oVn0w0u4m2s7YbqYH3zL7xwP0r1h0z3z1f7Wv3dJ5b1l0O8Xy6mC6dV7n3z2c9q1kFQf7Q9aGm2cYl2xNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Cli</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="programming_icon.ico" />
+
+    <!-- Ace Editor CDN -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ace.js"
+      integrity="sha512-x5mU0t9vawsI0b5z2Ue2bsa9dZf3Zx3lF0aYB2JY1t2tF9m1aX0oT1D3fJt7o1+3n4c6C4b5EqbE7+XgGzjQrw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ext-language_tools.min.js"
+      integrity="sha512-h5+0oVn0w0u4m2s7YbqYH3zL7xwP0r1h0z3z1f7Wv3dJ5b1l0O8Xy6mC6dV7n3z2c9q1kFQf7Q9aGm2cYl2xNQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
